# NIBS

./: README.md
nbisapp/NBIS/commonnbis/include/: archivo_que_llama_a_syserr.c  syserr.c
nbisapp/NBIS/ijg/src/lib/jpegb/: ansi2knr.c  coderule.c  example.c  jconfig.h  jmemansi.c  jmemdos.c  jmemmac.c
nbisapp/ios/: CMakeLists.txt  cmd.txt  ios.toolchain.cmake
nbisapp/nbisapp/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
nbisapp/nbisapp.xcodeproj/: project.pbxproj
nbisapp/nbisapp.xcodeproj/project.xcworkspace/xcuserdata/albertomarin.xcuserdatad/: UserInterfaceState.xcuserstate
nbisapp/nbisapp.xcodeproj/xcuserdata/albertomarin.xcuserdatad/xcschemes/: xcschememanagement.plist
nbisapp/nbisapp/NBIS/commonnbis/src/lib/cblas/: isamax.c  sscal.c  sswap.c  ssymv.c  ssyr2.c  ssyr2k.c  strmm.c  strmv.c  xerbla.c
nbisapp/nbisapp/NBIS/commonnbis/src/lib/clapck/: sorg2r.c  sorgql.c  sorgqr.c  sorgtr.c  sorm2l.c  sorm2r.c  sormql.c  sormqr.c  sormtr.c  sstebz.c  sstein.c  ssteqr.c  ssterf.c  ssyevx.c  ssytd2.c  ssytrd.c
nbisapp/nbisapp/NBIS/commonnbis/src/lib/fet/: strfet.c  updatfet.c  writefet.c
nbisapp/nbisapp/NBIS/imgtools/src/lib/ihead/: valdcomp.c  writihdr.c
nbisapp/nbisapp/NBIS/imgtools/src/lib/image/: sunrast.c  writihdr.c
nbisapp/nbisapp/NBIS/imgtools/src/lib/jpegl/: tableio.c  util.c
nbisapp/nbisapp/NBIS/imgtools/src/lib/wsq/: tableio.c  tree.c  util.c
